change date time picker from military time and showing seconds to 12hr time no seconds

--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -72,7 +72,9 @@
      $(function() {
         $('#scheduled_bid_date').datetimepicker({
         dateFormat: 'yy-mm-dd',
-        timeFormat: 'HH:mm:ss'
+        timeFormat: 'HH:mm:ss',
+        showSecond: false,
+        pickerTimeFormat: 'hh:mm tt'
          });
      });
      </script>
