dont show notes if there are none

--- a/project/templates/bid_pdf.html
+++ b/project/templates/bid_pdf.html
@@ -80,6 +80,7 @@
 </div>
 
 <br>
+{% if bid.notes %}
 <div class="entries">
     <div class="datagrid">
     <table>
@@ -95,6 +96,7 @@
         </tr>
     </table>
 </div>
+{% endif %}
 
 
 <br>
