--- a/project/templates/overview.html
+++ b/project/templates/overview.html
@@ -1,6 +1,7 @@
 {% extends "_base.html" %}
 {% block content %}
 
+
 <div class="entries">
   <h4><strong>Jobs that Need a Bid</strong></h4>
   <div class="datagrid">
@@ -14,49 +15,26 @@
           <th width="13%"><strong>Telephone</strong></th>
         </tr>
       </thead>
-      {% for bid in jobs_need_bid %}
-        {% if bid.status == 'Needs Bid': %}
+
+    {% for bid in bids %}
+        {% if bid['bid_status'] == 'Needs Bid': %}
           <tr>
-            {% for customer in customers %}
-                {% if bid.customer_id == customer.id %}
-                    <td><a href="{{ url_for('customer.customer_details', customer_id=customer.id) }}">{{ customer.name }}</a></td>
-                {% endif %}
-            {% endfor %}
-
-            <td><a href="{{ url_for('bid.bid_edit', bid_edit_id=bid.id) }}">{{ bid.description }}</a></td>
-
-
-            {% if bid.scheduled_bid_date is not none: %}
-                <td>{{ bid.scheduled_bid_date.strftime('%x %I:%M %p') }}</td>
-            {% else: %}
-                <td></td>
-            {% endif %}
-
-            {% for address in addresses %}
-                {% if bid.address_id == address.id %}
-                   <td><a href="https://www.google.com/maps/place/{{ address.street.replace(' ', '+') }}+{{ address.city }}+{{ address.state }}+{{ address.zip }}"
-                    target="_blank">{{ address.street }}, {{ address.city }}, {{ address.state }}</a></td>
-                {% endif %}
-            {% endfor %}
-
-
-            {% for customer in customers %}
-                {% if bid.customer_id == customer.id %}
-                    <td>{{ "(" + customer.telephone[:3] + ") " + customer.telephone[3:6] + "-" + customer.telephone[6:] }}</td>
-                {% endif %}
-            {% endfor %}
-          </tr>
+              <td><a href="{{ url_for('customer.customer_details', customer_id=bid['customer_id']) }}">{{ bid['customer_name'] }}</a></td>
+              <td><a href="{{ url_for('bid.bid_edit', bid_edit_id=bid['bid_id']) }}">{{ bid['bid_description'] }}</a></td>
+              <td>{{ bid['bid_date'] }}</td>
+              <td><a href="https://www.google.com/maps/place/{{ bid['address_street'].replace(' ', '+') }}+{{ bid['address_city'] }}+{{ bid['address_state'] }}+{{ bid['address_zip'] }}"
+                    target="_blank">{{ bid['address_street'] }}, {{ bid['address_city'] }}, {{ bid['address_state'] }}</a></td>
+              <td>{{ bid['customer_telephone'] }}</td>
         {% endif %}
     {% endfor %}
 
     </table>
   </div>
 </div>
-
+<br>
 
 <div class="entries">
-    <br>
-  <h4><strong>Jobs In Progress</strong></h4>
+  <h4><strong>Jobs in Progress</strong></h4>
   <div class="datagrid">
     <table>
       <thead>
@@ -69,46 +47,25 @@
         </tr>
       </thead>
 
-    {% for bid in jobs_started %}
-        {% if bid.status == 'Job Started': %}
+    {% for bid in bids %}
+        {% if bid['bid_status'] == 'Job Started': %}
           <tr>
-            {% for customer in customers %}
-                {% if bid.customer_id == customer.id %}
-                    <td><a href="{{ url_for('customer.customer_details', customer_id=customer.id) }}">{{ customer.name }}</a></td>
-                {% endif %}
-            {% endfor %}
-
-            <td><a href="{{ url_for('bid.bid_edit', bid_edit_id=bid.id) }}">{{ bid.description }}</a></td>
-
-            {% if bid.actual_start is not none: %}
-                <td>{{ bid.actual_start.strftime('%x') }}</td>
-            {% else %}
-                <td></td>
-            {% endif %}
-
-            {% for address in addresses %}
-                {% if bid.address_id == address.id %}
-                   <td><a href="https://www.google.com/maps/place/{{ address.street.replace(' ', '+') }}+{{ address.city }}+{{ address.state }}+{{ address.zip }}"
-                    target="_blank">{{ address.street }}, {{ address.city }}, {{ address.state }}</a></td>
-                {% endif %}
-            {% endfor %}
-
-
-            {% for customer in customers %}
-                {% if bid.customer_id == customer.id %}
-                    <td>{{ "(" + customer.telephone[:3] + ") " + customer.telephone[3:6] + "-" + customer.telephone[6:] }}</td>
-                {% endif %}
-            {% endfor %}
-          </tr>
+              <td><a href="{{ url_for('customer.customer_details', customer_id=bid['customer_id']) }}">{{ bid['customer_name'] }}</a></td>
+              <td><a href="{{ url_for('bid.bid_edit', bid_edit_id=bid['bid_id']) }}">{{ bid['bid_description'] }}</a></td>
+              <td>{{ bid['bid_date'] }}</td>
+              <td><a href="https://www.google.com/maps/place/{{ bid['address_street'].replace(' ', '+') }}+{{ bid['address_city'] }}+{{ bid['address_state'] }}+{{ bid['address_zip'] }}"
+                    target="_blank">{{ bid['address_street'] }}, {{ bid['address_city'] }}, {{ bid['address_state'] }}</a></td>
+              <td>{{ bid['customer_telephone'] }}</td>
         {% endif %}
     {% endfor %}
+
     </table>
   </div>
 </div>
+<br>
 
 
 <div class="entries">
-    <br>
   <h4><strong>Jobs in Queue</strong></h4>
   <div class="datagrid">
     <table>
@@ -122,47 +79,25 @@
         </tr>
       </thead>
 
-    {% for bid in jobs_accepted %}
-        {% if bid.status == 'Job Accepted': %}
+    {% for bid in bids %}
+        {% if bid['bid_status'] == 'Job Accepted': %}
           <tr>
-            {% for customer in customers %}
-                {% if bid.customer_id == customer.id %}
-                    <td><a href="{{ url_for('customer.customer_details', customer_id=customer.id) }}">{{ customer.name }}</a></td>
-                {% endif %}
-            {% endfor %}
-
-            <td><a href="{{ url_for('bid.bid_edit', bid_edit_id=bid.id) }}">{{ bid.description }}</a></td>
-
-            {% if bid.tentative_start is not none: %}
-                <td>{{ bid.tentative_start.strftime('%x') }}</td>
-            {% else %}
-                <td></td>
-            {% endif %}
-
-            {% for address in addresses %}
-                {% if bid.address_id == address.id %}
-                   <td><a href="https://www.google.com/maps/place/{{ address.street.replace(' ', '+') }}+{{ address.city }}+{{ address.state }}+{{ address.zip }}"
-                    target="_blank">{{ address.street }}, {{ address.city }}, {{ address.state }}</a></td>
-                {% endif %}
-            {% endfor %}
-
-
-            {% for customer in customers %}
-                {% if bid.customer_id == customer.id %}
-                    <td>{{ "(" + customer.telephone[:3] + ") " + customer.telephone[3:6] + "-" + customer.telephone[6:] }}</td>
-                {% endif %}
-            {% endfor %}
-          </tr>
+              <td><a href="{{ url_for('customer.customer_details', customer_id=bid['customer_id']) }}">{{ bid['customer_name'] }}</a></td>
+              <td><a href="{{ url_for('bid.bid_edit', bid_edit_id=bid['bid_id']) }}">{{ bid['bid_description'] }}</a></td>
+              <td>{{ bid['bid_date'] }}</td>
+              <td><a href="https://www.google.com/maps/place/{{ bid['address_street'].replace(' ', '+') }}+{{ bid['address_city'] }}+{{ bid['address_state'] }}+{{ bid['address_zip'] }}"
+                    target="_blank">{{ bid['address_street'] }}, {{ bid['address_city'] }}, {{ bid['address_state'] }}</a></td>
+              <td>{{ bid['customer_telephone'] }}</td>
         {% endif %}
     {% endfor %}
 
     </table>
   </div>
 </div>
+<br>
 
 
 <div class="entries">
-    <br>
   <h4><strong>Jobs Awaiting Customer Acceptance</strong></h4>
   <div class="datagrid">
     <table>
@@ -176,37 +111,21 @@
         </tr>
       </thead>
 
-    {% for bid in jobs_awaiting_acceptance %}
-        {% if bid.status == 'Awaiting Customer Acceptance': %}
+    {% for bid in bids %}
+        {% if bid['bid_status'] == 'Awaiting Customer Acceptance': %}
           <tr>
-            {% for customer in customers %}
-                {% if bid.customer_id == customer.id %}
-                    <td><a href="{{ url_for('customer.customer_details', customer_id=customer.id) }}">{{ customer.name }}</a></td>
-                {% endif %}
-            {% endfor %}
-
-            <td><a href="{{ url_for('bid.bid_edit', bid_edit_id=bid.id) }}">{{ bid.description }}</a></td>
-            <td>{{ bid.scheduled_bid_date.strftime('%x') }}</td>
-
-            {% for address in addresses %}
-                {% if bid.address_id == address.id %}
-                   <td><a href="https://www.google.com/maps/place/{{ address.street.replace(' ', '+') }}+{{ address.city }}+{{ address.state }}+{{ address.zip }}"
-                    target="_blank">{{ address.street }}, {{ address.city }}, {{ address.state }}</a></td>
-                {% endif %}
-            {% endfor %}
-
-
-            {% for customer in customers %}
-                {% if bid.customer_id == customer.id %}
-                    <td>{{ "(" + customer.telephone[:3] + ") " + customer.telephone[3:6] + "-" + customer.telephone[6:] }}</td>
-                {% endif %}
-            {% endfor %}
-          </tr>
+              <td><a href="{{ url_for('customer.customer_details', customer_id=bid['customer_id']) }}">{{ bid['customer_name'] }}</a></td>
+              <td><a href="{{ url_for('bid.bid_edit', bid_edit_id=bid['bid_id']) }}">{{ bid['bid_description'] }}</a></td>
+              <td>{{ bid['bid_date'] }}</td>
+              <td><a href="https://www.google.com/maps/place/{{ bid['address_street'].replace(' ', '+') }}+{{ bid['address_city'] }}+{{ bid['address_state'] }}+{{ bid['address_zip'] }}"
+                    target="_blank">{{ bid['address_street'] }}, {{ bid['address_city'] }}, {{ bid['address_state'] }}</a></td>
+              <td>{{ bid['customer_telephone'] }}</td>
         {% endif %}
     {% endfor %}
 
     </table>
   </div>
 </div>
+
 
 {% endblock %}
