more table tests

--- a/project/templates/bid_pdf.html
+++ b/project/templates/bid_pdf.html
@@ -104,8 +104,7 @@
     <table>
       <thead>
         <tr>
-          <th width="70px"><strong>We Propose</strong></th>
-          <th width="10px" style="text-align: right;"><strong></strong></th>
+              <th colspan="2"><strong>We Propose</strong></th>
         </tr>
       </thead>
 
@@ -130,8 +129,7 @@
     <table>
       <thead>
         <tr>
-          <th width="70px"><strong>Payment Outline</strong></th>
-          <th width="10px" style="text-align: right;"><strong></strong></th>
+            <th colspan="2"><strong>Payment Outline</strong></th>
         </tr>
       </thead>
 
@@ -157,8 +155,7 @@
     <table>
       <thead>
         <tr>
-          <th width="100px"><strong>Acceptance of Proposal</strong></th>
-          <th width="10px" style="text-align: right;"><strong></strong></th>
+          <th colspan="2"><strong>Acceptance of Proposal</strong></th>
         </tr>
       </thead>
 
