--- a/project/templates/bid_pdf.html
+++ b/project/templates/bid_pdf.html
@@ -167,6 +167,20 @@
             </td>
         </tr>
 
+        <tr>
+            <td>Signature:</td>
+            <td>Date:</td>
+        </tr>
+        
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td height="60px">X__________________________________________________________________________</td>
+            <td height="60px">________________</td>
+        </tr>
+
     </table>
 </div>
 
