--- a/project/templates/bid_pdf.html
+++ b/project/templates/bid_pdf.html
@@ -10,6 +10,8 @@
     <title>Madsen Concrete Services Proposal</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/pdf.css') }}">
 </head>
+
+
 <body>
 {% block content %}
 <table id="header" style="width: 100%">
@@ -77,6 +79,7 @@
   {% endif %}
 
     </table>
+    </div>
 </div>
 
 <br>
@@ -95,6 +98,7 @@
             </td>
         </tr>
     </table>
+    </div>
 </div>
 {% endif %}
 
@@ -121,6 +125,7 @@
         </tr>
 
     </table>
+    </div>
 </div>
 
 
@@ -146,6 +151,7 @@
         </tr>
 
     </table>
+    </div>
 </div>
 
 
@@ -178,82 +184,13 @@
         </tr>
         <tr>
             <td height="60px">X______________________________________________________________</td>
-            <td height="60px">________________------------</td>
+            <td height="60px">_____________</td>
         </tr>
 
     </table>
+    </div>
 </div>
 
-
-
-
-
-
-
-<br>
-<div class="entries">
-    <div class="datagrid">
-    <table>
-        <tr style="color: #FFFFFF; background: #000000; font-size: 15px; font-weight: bold">
-            <th width="75px"><strong>We Propose</strong></th>
-            <th></th>
-        </tr>
-
-    <tr>
-        <td>
-            Hereby to furnish material and labor complete in accordance with above specifications, for the sum of<br>
-        </td>
-        <td style="text-align: right;">
-            <br>
-            {% if sum_of_items[0] %}
-                {{ "${0:0.2f}".format(sum_of_items[0]) }}
-            {% endif %}
-        </td>
-    </tr>
-
-        <tr style="color: #FFFFFF; background: #000000; font-size: 15px; font-weight: bold">
-            <th colspan="2"><strong>Payment Outline</strong></th>
-        </tr>
-
-        <tr>
-            <td>Deposit</td>
-            <td style="text-align: right;">{{ "${0:0.2f}".format(bid.down_payment_amount) }}</td>
-        </tr>
-
-        <tr>
-            <td>Remaining Balance Due Upon Completion of the Contract</td>
-            {% if sum_of_items[0] %}
-                <td style="text-align: right;">{{ "${0:0.2f}".format(sum_of_items[0] - bid.down_payment_amount) }}</td>
-            {% endif %}
-        </tr>
-
-        <tr  style="color: #FFFFFF; background: #000000; font-size: 15px; font-weight: bold">
-            <th colspan="2"><strong>Acceptance of Proposal</strong></th>
-        </tr>
-
-        <tr>
-            <td colspan="2">
-                The above prices, specifications and conditions are satisfactory and are hereby accepted.
-                You are authorized to do the work as specified. Payment will be made as outlined above.
-                I have received a copy of the Pre-Lien Notice.
-            </td>
-        </tr>
-
-        <tr>
-            <td>Signature:</td>
-            <td>Date:</td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-        </tr>
-        <tr>
-            <td height="60px">X__________________________________________________________________________</td>
-            <td height="60px">________________</td>
-        </tr>
-
-    </table>
-</div>
 {% endblock %}
 </body>
 </html>
